// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`echo multiple 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hi {
  hi: true
} hi again
",
}
`;

exports[`echo object 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "{
  hi: true
}
",
}
`;

exports[`echo string 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hi
",
}
`;
